Create Account XAML

--- a/Projekat/PuzzleStorm/Client/MainWindow.xaml
+++ b/Projekat/PuzzleStorm/Client/MainWindow.xaml
@@ -8,8 +8,8 @@
     Title="MainWindow"
     Width="800"
     Height="500"
-    mc:Ignorable="d"
-    FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
+    FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
+    mc:Ignorable="d">
     <Grid>
         <Frame x:Name="MainFrame" Content="{Binding CurrentPage, Converter={local:ApplicationPageValueConverter}}" />
     </Grid>
