--- a/Projekat/PuzzleStorm/Client/Pages/CreateAccount.xaml
+++ b/Projekat/PuzzleStorm/Client/Pages/CreateAccount.xaml
@@ -1,12 +1,12 @@
 ﻿<Page
-    x:Class="Client.LoginPage"
+    x:Class="Client.CreateAccount"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Client"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="LoginPage"
+    Title="CreateAccount"
     d:DesignHeight="500"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -46,8 +46,14 @@
                             <TextBox FontSize="15" />
                         </Grid>
 
+                        <!--  Email  -->
+                        <Grid Margin="0,0,0,10">
+                            <materialDesign:PackIcon VerticalAlignment="Center" Kind="MailRu" />
+                            <TextBox FontSize="15" />
+                        </Grid>
+
                         <!--  Password  -->
-                        <Grid>
+                        <Grid Margin="0,0,0,10">
                             <materialDesign:PackIcon VerticalAlignment="Center" Kind="Lock" />
                             <PasswordBox FontSize="15" />
                         </Grid>
@@ -57,19 +63,19 @@
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <!--  Log in dugme  -->
+                            <!--  Create dugme  -->
                             <Button
                                 Grid.Column="0"
                                 Margin="10,13,10,0"
                                 materialDesign:ShadowAssist.ShadowDepth="Depth3">
-                                LOG IN
+                                CREATE
                             </Button>
-                            <!--  Create acc dugme  -->
+                            <!--  Back dugme  -->
                             <Button
                                 Grid.Column="1"
                                 Margin="10,13,10,0"
                                 materialDesign:ShadowAssist.ShadowDepth="Depth3">
-                                CREATE ACCOUNT
+                                BACK
                             </Button>
                         </Grid>
                     </StackPanel>
