--- a/Projekat/PuzzleStorm/Client/Pages/CreateAccount.xaml
+++ b/Projekat/PuzzleStorm/Client/Pages/CreateAccount.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<local:BasePage
     x:Class="Client.CreateAccount"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,6 +9,7 @@
     Title="CreateAccount"
     d:DesignHeight="500"
     d:DesignWidth="800"
+    x:TypeArguments="local:CreateAccViewModel"
     mc:Ignorable="d">
 
     <Grid>
@@ -43,19 +44,19 @@
                         <!--  Acc name  -->
                         <Grid Margin="0,10">
                             <materialDesign:PackIcon VerticalAlignment="Center" Kind="Account" />
-                            <TextBox FontSize="15" />
+                            <TextBox FontSize="15" Text="{Binding UserName}" />
                         </Grid>
 
                         <!--  Email  -->
                         <Grid Margin="0,0,0,10">
                             <materialDesign:PackIcon VerticalAlignment="Center" Kind="MailRu" />
-                            <TextBox FontSize="15" />
+                            <TextBox FontSize="15" Text="{Binding Email}" />
                         </Grid>
 
                         <!--  Password  -->
                         <Grid Margin="0,0,0,10">
                             <materialDesign:PackIcon VerticalAlignment="Center" Kind="Lock" />
-                            <PasswordBox FontSize="15" />
+                            <PasswordBox x:Name="PasswordText" FontSize="15" />
                         </Grid>
 
                         <Grid>
@@ -67,7 +68,9 @@
                             <Button
                                 Grid.Column="0"
                                 Margin="10,13,10,0"
-                                materialDesign:ShadowAssist.ShadowDepth="Depth3">
+                                materialDesign:ShadowAssist.ShadowDepth="Depth3"
+                                Command="{Binding CreateAccCommand}"
+                                CommandParameter="{Binding ElementName=PasswordText}">
                                 CREATE
                             </Button>
                             <!--  Back dugme  -->
@@ -83,4 +86,4 @@
             </StackPanel>
         </ScrollViewer>
     </Grid>
-</Page>
+</local:BasePage>
