--- a/Projekat/PuzzleStorm/Client/Pages/LoginPage.xaml
+++ b/Projekat/PuzzleStorm/Client/Pages/LoginPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<local:BasePage
     x:Class="Client.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,6 +9,7 @@
     Title="LoginPage"
     d:DesignHeight="500"
     d:DesignWidth="800"
+    x:TypeArguments="local:LoginViewModel"
     mc:Ignorable="d">
 
     <Grid>
@@ -43,13 +44,13 @@
                         <!--  Acc name  -->
                         <Grid Margin="0,10">
                             <materialDesign:PackIcon VerticalAlignment="Center" Kind="Account" />
-                            <TextBox FontSize="15" />
+                            <TextBox FontSize="15" Text="{Binding UserName}" />
                         </Grid>
 
                         <!--  Password  -->
                         <Grid>
                             <materialDesign:PackIcon VerticalAlignment="Center" Kind="Lock" />
-                            <PasswordBox FontSize="15" />
+                            <PasswordBox x:Name="PasswordText" FontSize="15" />
                         </Grid>
 
                         <Grid>
@@ -61,7 +62,9 @@
                             <Button
                                 Grid.Column="0"
                                 Margin="10,13,10,0"
-                                materialDesign:ShadowAssist.ShadowDepth="Depth3">
+                                materialDesign:ShadowAssist.ShadowDepth="Depth3"
+                                Command="{Binding LoginCommand}"
+                                CommandParameter="{Binding ElementName=PasswordText}">
                                 LOG IN
                             </Button>
                             <!--  Create acc dugme  -->
@@ -77,4 +80,5 @@
             </StackPanel>
         </ScrollViewer>
     </Grid>
-</Page>
+</local:BasePage>
+
