--- a/Projekat/PuzzleStorm/Client/MainWindow.xaml
+++ b/Projekat/PuzzleStorm/Client/MainWindow.xaml
@@ -11,6 +11,9 @@
     FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
     mc:Ignorable="d">
     <Grid>
-        <Frame x:Name="MainFrame" Content="{Binding CurrentPage, Converter={local:ApplicationPageValueConverter}}" />
+        <Frame
+            x:Name="MainFrame"
+            Content="{Binding CurrentPage, Converter={local:ApplicationPageValueConverter}}"
+            NavigationUIVisibility="Hidden" />
     </Grid>
 </Window>
