--- a/Projekat/PuzzleStorm/Client/Pages/CreateAccount.xaml
+++ b/Projekat/PuzzleStorm/Client/Pages/CreateAccount.xaml
@@ -13,7 +13,6 @@
     mc:Ignorable="d">
 
     <Grid>
-
         <!--  Pozadina  -->
         <Grid.Background>
             <ImageBrush ImageSource="../Images/Backgrounds/puzzlewall.jpg" Stretch="UniformToFill" />
@@ -77,7 +76,8 @@
                             <Button
                                 Grid.Column="1"
                                 Margin="10,13,10,0"
-                                materialDesign:ShadowAssist.ShadowDepth="Depth3">
+                                materialDesign:ShadowAssist.ShadowDepth="Depth3"
+                                Command="{Binding BackCommand}">
                                 BACK
                             </Button>
                         </Grid>
