--- a/Projekat/PuzzleStorm/Client/MainWindow.xaml
+++ b/Projekat/PuzzleStorm/Client/MainWindow.xaml
@@ -4,16 +4,19 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Client"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
-    Width="800"
-    Height="600"
+    Width="1200"
+    Height="700"
     FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
     mc:Ignorable="d">
-    <Grid>
-        <Frame
-            x:Name="MainFrame"
-            Content="{Binding CurrentPage, Converter={local:ApplicationPageValueConverter}}"
-            NavigationUIVisibility="Hidden" />
-    </Grid>
+    <materialDesign:DialogHost>
+        <Grid>
+            <Frame
+                x:Name="MainFrame"
+                Content="{Binding CurrentPage, Converter={local:ApplicationPageValueConverter}}"
+                NavigationUIVisibility="Hidden" />
+        </Grid>
+    </materialDesign:DialogHost>
 </Window>
