--- a/Projekat/PuzzleStorm/Client/Pages/LoginPage.xaml
+++ b/Projekat/PuzzleStorm/Client/Pages/LoginPage.xaml
@@ -28,32 +28,33 @@
 
                 <!--  Beli okvir oko forme  -->
                 <Border
-                    Width="500"
+                    Width="700"
+                    Height="300"
                     Margin="50,50,50,0"
-                    Padding="15,40,15,15"
+                    Padding="15,30,15,15"
                     Background="AliceBlue"
                     BorderBrush="Black"
                     BorderThickness="2"
                     CornerRadius="10">
 
-                    <StackPanel>
+                    <StackPanel VerticalAlignment="Center">
 
                         <!--  PuzzleStorm  -->
-                        <TextBlock FontSize="30" FontWeight="Bold">PuzzleStorm</TextBlock>
+                        <TextBlock FontSize="38" FontWeight="ExtraBold">PuzzleStorm</TextBlock>
 
                         <!--  Acc name  -->
-                        <Grid Margin="0,10">
+                        <Grid Margin="10,30,10,10">
                             <materialDesign:PackIcon VerticalAlignment="Center" Kind="Account" />
                             <TextBox FontSize="15" Text="{Binding UserName}" />
                         </Grid>
 
                         <!--  Password  -->
-                        <Grid>
+                        <Grid Margin="10,10,10,10">
                             <materialDesign:PackIcon VerticalAlignment="Center" Kind="Lock" />
                             <PasswordBox x:Name="PasswordText" FontSize="15" />
                         </Grid>
 
-                        <Grid>
+                        <Grid Margin="0,20,0,0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="*" />
@@ -61,18 +62,22 @@
                             <!--  Log in dugme  -->
                             <Button
                                 Grid.Column="0"
+                                Height="35"
                                 Margin="10,13,10,0"
                                 materialDesign:ShadowAssist.ShadowDepth="Depth3"
                                 Command="{Binding LoginCommand}"
-                                CommandParameter="{Binding ElementName=PasswordText}">
+                                CommandParameter="{Binding ElementName=PasswordText}"
+                                FontSize="16">
                                 LOG IN
                             </Button>
                             <!--  Create acc dugme  -->
                             <Button
                                 Grid.Column="1"
+                                Height="35"
                                 Margin="10,13,10,0"
                                 materialDesign:ShadowAssist.ShadowDepth="Depth3"
-                                Command="{Binding CreateAccButtonCommand}">
+                                Command="{Binding CreateAccButtonCommand}"
+                                FontSize="16">
                                 CREATE ACCOUNT
                             </Button>
                         </Grid>
