--- a/Projekat/PuzzleStorm/Client/MainWindow.xaml
+++ b/Projekat/PuzzleStorm/Client/MainWindow.xaml
@@ -7,8 +7,12 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
-    Width="1200"
-    Height="700"
+    MinWidth="1200"
+    MaxWidth="1400"
+    Width="1250"
+    MinHeight="740"
+    MaxHeight="800"
+    Height="740"
     FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
     mc:Ignorable="d">
     <materialDesign:DialogHost>
