--- a/Projekat/PuzzleStorm/Client/Pages/MainPage.xaml
+++ b/Projekat/PuzzleStorm/Client/Pages/MainPage.xaml
@@ -7,28 +7,50 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainPage"
-    d:DesignHeight="600"
-    d:DesignWidth="900"
+    d:DesignHeight="800"
+    d:DesignWidth="1200"
     x:TypeArguments="local:MainPageViewModel"
     Background="#DFDFDF"
     mc:Ignorable="d">
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
+        <!--  Welcome message  -->
+        <Grid Grid.Row="0" Margin="55 15 0 5">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock
+                HorizontalAlignment="Left"
+                FontSize="40"
+                FontWeight="ExtraBold">
+                Welcome to PuzzleStorm!
+            </TextBlock>
+            <TextBlock
+                Grid.Row="1"
+                HorizontalAlignment="Left"
+                FontSize="18"
+                FontWeight="Bold">
+                Please select a room or create a new one!
+            </TextBlock>
+        </Grid>
+
         <!--  Rooms  -->
-        <Grid Grid.Row="0">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0" Margin="30,30,0,15">
+            <Grid Grid.Column="0" Margin="30,5,0,5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
@@ -57,12 +79,12 @@
 
         <!--  Linija  -->
         <Separator
-            Grid.Row="1"
+            Grid.Row="2"
             Margin="50,15"
             Background="#4D1F1F" />
 
         <!--  Grid za dugmici  -->
-        <Grid Grid.Row="2" Margin="0,0,0,-7">
+        <Grid Grid.Row="3" Margin="0,0,0,-7">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
@@ -107,7 +129,7 @@
 
         <!--  LOG OUT  -->
         <Button
-            Grid.Row="3"
+            Grid.Row="4"
             Width="100"
             HorizontalAlignment="Right"
             Command="{Binding LogOutCommand}"
