--- a/Projekat/PuzzleStorm/Client/Pages/CreateRoomPage.xaml
+++ b/Projekat/PuzzleStorm/Client/Pages/CreateRoomPage.xaml
@@ -174,6 +174,10 @@
             </Grid.ColumnDefinitions>
             <!--  create dugme  -->
             <Button
+                Background="#9A8F78"
+                Foreground="Black"
+                FontWeight="Bold"
+                FontSize="18"
                 Grid.Column="0"
                 Margin="10,13,10,0"
                 materialDesign:ShadowAssist.ShadowDepth="Depth3"
@@ -182,6 +186,10 @@
             </Button>
             <!--  back dugme  -->
             <Button
+                Background="#9A8F78"
+                Foreground="Black"
+                FontWeight="Bold"
+                FontSize="18"
                 Grid.Column="1"
                 Margin="10,13,10,0"
                 materialDesign:ShadowAssist.ShadowDepth="Depth3"
