--- a/Projekat/PuzzleStorm/Client/Pages/MainPage.xaml
+++ b/Projekat/PuzzleStorm/Client/Pages/MainPage.xaml
@@ -43,6 +43,15 @@
             </TextBlock>
         </Grid>
 
+        <Label
+            Grid.Row="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Content="Trenutno nema soba :("
+            FontSize="50"
+            FontWeight="Bold"
+            Visibility="{Binding NoRoomLabel, Converter={local:OnTheMoveToVisibilityConverter}}" />
+
         <!--  Rooms  -->
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -58,9 +67,19 @@
                 </Grid.ColumnDefinitions>
 
                 <!--  Rooms Props  -->
-                <local:RoomPropsControl Grid.Column="0" DataContext="{Binding RoomsItemsList[0]}" />
-                <local:RoomPropsControl Grid.Column="1" DataContext="{Binding RoomsItemsList[1]}" />
-                <local:RoomPropsControl Grid.Column="2" DataContext="{Binding RoomsItemsList[2]}" />
+                <local:RoomPropsControl
+                    Grid.Column="0"
+                    DataContext="{Binding RoomsItemsList[0]}"
+                    Visibility="{Binding VisibilityForMainRooms[0], Converter={local:OnTheMoveToVisibilityConverter}}" />
+                <local:RoomPropsControl
+                    Grid.Column="1"
+                    DataContext="{Binding RoomsItemsList[1]}"
+                    Visibility="{Binding VisibilityForMainRooms[1], Converter={local:OnTheMoveToVisibilityConverter}}" />
+                <local:RoomPropsControl
+                    Grid.Column="2"
+                    DataContext="{Binding RoomsItemsList[2]}"
+                    Visibility="{Binding VisibilityForMainRooms[2], Converter={local:OnTheMoveToVisibilityConverter}}" />
+
             </Grid>
 
             <!--  ... dugme  -->
