--- a/Projekat/PuzzleStorm/Client/MainWindow.xaml
+++ b/Projekat/PuzzleStorm/Client/MainWindow.xaml
@@ -7,7 +7,7 @@
     xmlns:local="clr-namespace:Client"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
+    Title="PuzzleStorm"
     Width="1250"
     Height="740"
     MinWidth="1200"
