Asinhroni rad uzimanja soba test

--- a/Projekat/PuzzleStorm/Client/Pages/LobbyPage.xaml
+++ b/Projekat/PuzzleStorm/Client/Pages/LobbyPage.xaml
@@ -104,6 +104,7 @@
             Height="55"
             Margin="400,0"
             Background="#9A8F78"
+            Command="{Binding StartReadyCommand}"
             Content="START/READY"
             FontSize="25"
             FontWeight="ExtraBold"
