--- a/Projekat/PuzzleStorm/Client/Controls/LobbyJoinedControl.xaml
+++ b/Projekat/PuzzleStorm/Client/Controls/LobbyJoinedControl.xaml
@@ -50,9 +50,9 @@
                 Margin="0,5"
                 Background="#4D1F1F" />
 
-            <Grid Grid.Row="2" Margin="13 15">
+            <Grid Grid.Row="2" Margin="13,15">
                 <ScrollViewer VerticalScrollBarVisibility="Hidden">
-                    <ItemsControl ItemsSource="{Binding JoinedPlayersItems}">
+                    <ItemsControl ItemsSource="{Binding Path=JoinedPlayersItems, UpdateSourceTrigger=PropertyChanged}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <local:LobbyJoinedPlayerControl />
