--- a/Projekat/PuzzleStorm/Client/Controls/LobbyJoinedPlayerControl.xaml
+++ b/Projekat/PuzzleStorm/Client/Controls/LobbyJoinedPlayerControl.xaml
@@ -31,6 +31,6 @@
             Margin="0,0,20,0"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            Fill="{Binding Ready, Converter={local:BoolToColorConverter}}" />
+            Fill="{Binding Ready, Converter={local:BoolToColorConverter}, UpdateSourceTrigger=PropertyChanged}" />
     </Grid>
 </UserControl>
